tests/missing_expr_after_right_arrow/expected_diagnostics.txt
grammar.peg:1:11: error: Expected an expression after this.
 1 | FirstRule <-
   |           ~~
